[project]
name = "save-line-points"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altgraph>=0.17.4",
    "macholib>=1.16.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "selenium>=4.34.2",
    "six>=1.17.0",
    "urllib3>=2.5.0",
    "xlrd>=2.0.2",
]
